# iot_environment_monitor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/backlight/: CMakeLists.txt  backlight.c
components/backlight/include/: backlight.h
components/bat_adc/: CMakeLists.txt  bat_adc.c
components/bat_adc/include/: bat_adc.h
components/lpm/: CMakeLists.txt  lpm.c
components/lpm/include/: lpm.h
components/mqtt_user/: CMakeLists.txt  mqtt_user.c
components/mqtt_user/include/: mqtt_user.h
components/nvs_helper/: CMakeLists.txt  nvs_helper.c
components/nvs_helper/include/: nvs_helper.h
components/ota/: CMakeLists.txt  ota.c
components/ota/include/: ota.h
components/power_management/: CMakeLists.txt  power_management.c
components/power_management/include/: power_management.h
components/rgb_lcd/: CMakeLists.txt  rgb_lcd.c
components/rgb_lcd/include/: rgb_lcd.h
components/sgp4x/: CMakeLists.txt  Kconfig  sgp4x.c  type_utils.c
components/sgp4x/include/: sgp4x.h  sgp4x_version.h  type_utils.h  type_utils_version.h
components/stcc4/: CMakeLists.txt  stcc4.c
components/wifi/: CMakeLists.txt  wifi.c
main/: CMakeLists.txt  Kconfig.projbuild  backlight.c  idf_component.yml  lvgl_setup.c  main.c  ntp.c  power_event_callback.c  wifi_event_callback.c
main/RTOS_tasks/: RTOS_tasks.h  bat_adc_task.c  get_data_task.c  sgp4x_task.c  status_bar_task.c  stcc4_task.c
main/include/: lvgl_setup.h  ntp.h
main/ui/: data_chart.c  data_chart.h  status_bar.c  status_bar.h
main/ui/custom/: custom.c
(+2 files in other folders)
